--- a/index.html
+++ b/index.html
@@ -7,99 +7,117 @@
     <title>WEB STUDIO</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+        integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <header class="header">
-        <nav class="main-nav">
-            <a href="./index.html" class="logo-link">WEB<span class="studio">STUDIO</span></a>
-            <ul class="nav-links">
-                <li><a href="#" class="nav-link">Studio</a></li>
-                <li><a href="./portfolio.html" class="nav-link">Portfolio</a></li>
-                <li><a href="#" class="nav-link">Contacts</a></li>
-            </ul>
-        </nav>
-        <address class="contact-info">
-            <ul>
-                <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111" class="contact-number">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+    <header class="header" id="">
+        <div class="container header-container">
+            <nav class="main-nav">
+                <a href="./index.html" class="logo-link">WEB<span class="studio">STUDIO</span></a>
+                <ul class="nav-links">
+                    <li><a href="#" class="nav-link">Studio</a></li>
+                    <li><a href="./portfolio.html" class="nav-link">Portfolio</a></li>
+                    <li><a href="#" class="nav-link">Contacts</a></li>
+                </ul>
+            </nav>
+            <address class="contact-info">
+                <ul class="contact-links">
+                    <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+                    <li><a href="tel:+110001111111" class="contact-number">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
 
     <main class="main-content">
         <section class="services-section">
-            <h1 class="services-title">Effective Solutions for Your Business</h1>
-            <button type="button" class="order-button">Order Service</button>
+            <div class="container services-container">
+                <h1 class="services-title">Effective Solutions for Your Business</h1>
+                <button type="button" class="order-button">Order Service</button>
+            </div>
         </section>
 
         <section class="features-section">
-            <h2 class="features-title">Our features</h2>
-            <ul class="features-list">
-                <li class="feature-item">
-                    <h3 class="feature-name">Strategy</h3>
-                    <p class="feature-description">Our goal is to identify the business problem to walk away with the
-                        perfect and creative solution.</p>
-                </li>
-                <li class="feature-item">
-                    <h3 class="feature-name">Punctuality</h3>
-                    <p class="feature-description">Bring the key message to the brand's audience for the best price
-                        within the shortest possible time.</p>
-                </li>
-                <li class="feature-item">
-                    <h3 class="feature-name">Diligence</h3>
-                    <p class="feature-description">Research and confirm brands that present the strongest digital growth
-                        opportunities and minimize risk.</p>
-                </li>
-                <li class="feature-item">
-                    <h3 class="feature-name">Technologies</h3>
-                    <p class="feature-description">Design practice focused on digital experiences. We bring forth a deep
-                        passion for problem-solving.</p>
-                </li>
-            </ul>
+            <div class="container features-container">
+                <h2 class="visually-hidden">Our features</h2>
+                <ul class="features-list">
+                    <li class="feature-item">
+                        <h3 class="feature-name">Strategy</h3>
+                        <p class="feature-description">Our goal is to identify the business problem to walk away with
+                            the
+                            perfect and creative solution.</p>
+                    </li>
+                    <li class="feature-item">
+                        <h3 class="feature-name">Punctuality</h3>
+                        <p class="feature-description">Bring the key message to the brand's audience for the best price
+                            within the shortest possible time.</p>
+                    </li>
+                    <li class="feature-item">
+                        <h3 class="feature-name">Diligence</h3>
+                        <p class="feature-description">Research and confirm brands that present the strongest digital
+                            growth
+                            opportunities and minimize risk.</p>
+                    </li>
+                    <li class="feature-item">
+                        <h3 class="feature-name">Technologies</h3>
+                        <p class="feature-description">Design practice focused on digital experiences. We bring forth a
+                            deep
+                            passion for problem-solving.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <section class="services-images-section">
-            <h2 class="services-images-title">What are we doing</h2>
-            <ul class="services-images-list">
-                <li class="service-image-item"><img src="./images/img1.jpg" alt="monitor" width="360"></li>
-                <li class="service-image-item"><img src="./images/img2.jpg" alt="phone" width="360"></li>
-                <li class="service-image-item"><img src="./images/img3.jpg" alt="laptop" width="360"></li>
-            </ul>
+            <div class="container services-images-container">
+                <h2 class="services-images-title">What are we doing</h2>
+                <ul class="services-images-list">
+                    <li class="service-image-item"><img src="./images/img1.jpg" alt="monitor" width="360"></li>
+                    <li class="service-image-item"><img src="./images/img2.jpg" alt="phone" width="360"></li>
+                    <li class="service-image-item"><img src="./images/img3.jpg" alt="laptop" width="360"></li>
+                </ul>
+            </div>
         </section>
 
         <section class="team-section">
-            <h2 class="team-title">Our Team</h2>
-            <ul class="team-list">
-                <li class="team-member">
-                    <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
-                    <h3 class="team-member-name">Mark Guerrero</h3>
-                    <p class="team-member-role">Product Designer</p>
-                </li>
-                <li class="team-member">
-                    <img src="./images/img-2.jpg" alt="Tom Ford" width="264">
-                    <h3 class="team-member-name">Tom Ford</h3>
-                    <p class="team-member-role">Frontend Developer</p>
-                </li>
-                <li class="team-member">
-                    <img src="./images/img-1.jpg" alt="Camila Garcia" width="264">
-                    <h3 class="team-member-name">Camila Garcia</h3>
-                    <p class="team-member-role">Marketing</p>
-                </li>
-                <li class="team-member">
-                    <img src="./images/img.jpg" alt="Daniel Wilson" width="264">
-                    <h3 class="team-member-name">Daniel Wilson</h3>
-                    <p class="team-member-role">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container team-container">
+                <h2 class="team-title">Our Team</h2>
+                <ul class="team-list">
+                    <li class="team-member">
+                        <img class="team-member-image" src="./images/img-3.jpg" alt="Mark Guerrero" width="264">
+                        <h3 class="team-member-name">Mark Guerrero</h3>
+                        <p class="team-member-role">Product Designer</p>
+                    </li>
+                    <li class="team-member">
+                        <img class="team-member-image" src="./images/img-2.jpg" alt="Tom Ford" width="264">
+                        <h3 class="team-member-name">Tom Ford</h3>
+                        <p class="team-member-role">Frontend Developer</p>
+                    </li>
+                    <li class="team-member">
+                        <img class="team-member-image" src="./images/img-1.jpg" alt="Camila Garcia" width="264">
+                        <h3 class="team-member-name">Camila Garcia</h3>
+                        <p class="team-member-role">Marketing</p>
+                    </li>
+                    <li class="team-member">
+                        <img  src="./images/img.jpg" alt="Daniel Wilson" width="264">
+                        <h3 class="team-member-name">Daniel Wilson</h3>
+                        <p class="team-member-role">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="logo-link">WEB<span class="studio-footer">STUDIO</span></a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-            growth solutions.</p>
+        <div class="container footer-container">
+            <a href="./index.html" class="logo-link">WEB<span class="studio-footer">STUDIO</span></a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+                growth solutions.</p>
+        </div>
     </footer>
 </body>
 
