--- a/portfolio.html
+++ b/portfolio.html
@@ -7,91 +7,100 @@
   <title>Portfolio</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-  <header class="header">
-    <nav class="main-nav">
-      <a href="./index.html" class="logo-link">WEB<span class="studio">STUDIO</span></a>
-      <ul class="nav-links">
-        <li><a href="#" class="nav-link">Studio</a></li>
-        <li><a href="./portfolio.html" class="nav-link">Portfolio</a></li>
-        <li><a href="#" class="nav-link">Contacts</a></li>
-      </ul>
-    </nav>
-    <address class="contact-info">
-      <ul>
-        <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111" class="contact-number">+11 (000) 111-11-11</a></li>
-      </ul>
-    </address>
-  </header>
+  <header class="header" id="">
+    <div class="container header-container">
+        <nav class="main-nav">
+            <a href="./index.html" class="logo-link">WEB<span class="studio">STUDIO</span></a>
+            <ul class="nav-links">
+                <li><a href="#" class="nav-link">Studio</a></li>
+                <li><a href="./portfolio.html" class="nav-link">Portfolio</a></li>
+                <li><a href="#" class="nav-link">Contacts</a></li>
+            </ul>
+        </nav>
+        <address class="contact-info">
+            <ul class="contact-links">
+                <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="contact-number">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
+    </div>
+</header>
 
   <main>
     <section class="projects-section">
-      <h1 class="section-title">Our Projects</h1>
-      <ul class="filter-buttons">
-        <button type="button" class="filter-button">All</button>
-        <button type="button" class="filter-button">Web Site</button>
-        <button type="button" class="filter-button">App</button>
-        <button type="button" class="filter-button">Design</button>
-        <button type="button" class="filter-button">Marketing</button>
-      </ul>
-      <ul class="project-list">
-        <li class="project-item">
-          <img src="./images/img8.jpg" alt="banking" width="360">
-          <h2 class="project-title">Banking App Interface Concept</h2>
-          <p class="project-category">App</p>
-        </li>
-        <li class="project-item">
-          <img src="./images/img-7.jpg" alt="cashless" width="360">
-          <h3 class="project-title">Cashless Payment</h3>
-          <p class="project-category">Marketing</p>
-        </li>
-        <li class="project-item">
-          <img src="./images/img7.jpg" alt="mediation" width="360">
-          <h3 class="project-title">Meditation App</h3>
-          <p class="project-category">App</p>
-        </li>
-        <li class="project-item">
-          <img src="./images/img-6.jpg" alt="taxi" width="360">
-          <h3 class="project-title">Taxi Service</h3>
-          <p class="project-category">Marketing</p>
-        </li>
-        <li class="project-item">
-          <img src="./images/img6.jpg" alt="screen" width="360">
-          <h3 class="project-title">Screen Illustrations</h3>
-          <p class="project-category">Design</p>
-        </li>
-        <li class="project-item">
-          <img src="./images/img-5.jpg" alt="courses" width="360">
-          <h3 class="project-title">Online Courses</h3>
-          <p class="project-category">Marketing</p>
-        </li>
-        <li class="project-item">
-          <img src="./images/img5.jpg" alt="istagram" width="360">
-          <h3 class="project-title">Instagram Stories Concept</h3>
-          <p class="project-category">Design</p>
-        </li>
-        <li class="project-item">
-          <img src="./images/img-4.jpg" alt="organic" width="360">
-          <h3 class="project-title">Organic Food</h3>
-          <p class="project-category">Web Site</p>
-        </li>
-        <li class="project-item">
-          <img src="./images/img4.jpg" alt="coffee" width="360">
-          <h3 class="project-title">Fresh Coffee</h3>
-          <p class="project-category">Web Site</p>
-        </li>
-      </ul>
+      <div class="container">
+        <h1 class="visually-hidden">Our Projects</h1>
+        <ul class="filter-buttons">
+          <button type="button" class="filter-button">All</button>
+          <button type="button" class="filter-button">Web Site</button>
+          <button type="button" class="filter-button">App</button>
+          <button type="button" class="filter-button">Design</button>
+          <button type="button" class="filter-button">Marketing</button>
+        </ul>
+        <ul class="project-list">
+          <li class="project-item">
+            <img src="./images/img8.jpg" alt="banking" width="360">
+            <h2 class="project-title">Banking App Interface Concept</h2>
+            <p class="project-category">App</p>
+          </li>
+          <li class="project-item">
+            <img src="./images/img-7.jpg" alt="cashless" width="360">
+            <h3 class="project-title">Cashless Payment</h3>
+            <p class="project-category">Marketing</p>
+          </li>
+          <li class="project-item">
+            <img src="./images/img7.jpg" alt="mediation" width="360">
+            <h3 class="project-title">Meditation App</h3>
+            <p class="project-category">App</p>
+          </li>
+          <li class="project-item">
+            <img src="./images/img-6.jpg" alt="taxi" width="360">
+            <h3 class="project-title">Taxi Service</h3>
+            <p class="project-category">Marketing</p>
+          </li>
+          <li class="project-item">
+            <img src="./images/img6.jpg" alt="screen" width="360">
+            <h3 class="project-title">Screen Illustrations</h3>
+            <p class="project-category">Design</p>
+          </li>
+          <li class="project-item">
+            <img src="./images/img-5.jpg" alt="courses" width="360">
+            <h3 class="project-title">Online Courses</h3>
+            <p class="project-category">Marketing</p>
+          </li>
+          <li class="project-item">
+            <img src="./images/img5.jpg" alt="istagram" width="360">
+            <h3 class="project-title">Instagram Stories Concept</h3>
+            <p class="project-category">Design</p>
+          </li>
+          <li class="project-item">
+            <img src="./images/img-4.jpg" alt="organic" width="360">
+            <h3 class="project-title">Organic Food</h3>
+            <p class="project-category">Web Site</p>
+          </li>
+          <li class="project-item">
+            <img src="./images/img4.jpg" alt="coffee" width="360">
+            <h3 class="project-title">Fresh Coffee</h3>
+            <p class="project-category">Web Site</p>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
 
   <footer class="footer">
-    <a href="./index.html" class="logo-link">WEB<span class="studio-footer">STUDIO</span></a>
-    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
-      solutions.</p>
+    <div class="container">
+      <a href="./index.html" class="logo-link">WEB<span class="studio-footer">STUDIO</span></a>
+      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
+        solutions.</p>
+    </div>
   </footer>
 </body>
 
