--- a/portfolio.html
+++ b/portfolio.html
@@ -96,12 +96,12 @@
   </main>
 
   <footer class="footer">
-    <div class="container">
-      <a href="./index.html" class="logo-link">WEB<span class="studio-footer">STUDIO</span></a>
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.</p>
+    <div class="container footer-container">
+        <a href="./index.html" class="logo-link">WEB<span class="studio-footer">STUDIO</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.</p>
     </div>
-  </footer>
+</footer>
 </body>
 
 </html>
