--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
 
     <footer class="footer">
         <div class="container footer-container">
-            <a href="./index.html" class="logo-link">WEB<span class="studio-footer">STUDIO</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+            <p class="footer-logo">
+                <a href="./index.html" class="logo-link">WEB<span class="studio-footer">STUDIO</span></a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
                 growth solutions.</p>
+            </p>
         </div>
     </footer>
 </body>
