--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
 
   <main>
     <section class="projects-section">
-      <div class="container">
+      <div class="container projects-container">
         <h1 class="visually-hidden">Our Projects</h1>
         <ul class="filter-buttons">
           <button type="button" class="filter-button">All</button>
@@ -97,9 +97,11 @@
 
   <footer class="footer">
     <div class="container footer-container">
-        <a href="./index.html" class="logo-link">WEB<span class="studio-footer">STUDIO</span></a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+        <p class="footer-logo">
+            <a href="./index.html" class="logo-link">WEB<span class="studio-footer">STUDIO</span></a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
+        </p>
     </div>
 </footer>
 </body>
