--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
         integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-    <header class="header" id="">
+    <header class="header">
         <div class="container header-container">
             <nav class="main-nav">
                 <a href="./index.html" class="logo-link">WEB<span class="studio">STUDIO</span></a>
@@ -73,7 +73,7 @@
         </section>
 
         <section class="services-images-section">
-            <div class="container services-images-container">
+            <div class="container">
                 <h2 class="services-images-title">What are we doing</h2>
                 <ul class="services-images-list">
                     <li class="service-image-item"><img src="./images/img1.jpg" alt="monitor" width="360"></li>
@@ -84,7 +84,7 @@
         </section>
 
         <section class="team-section">
-            <div class="container team-container">
+            <div class="container">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-member">
@@ -113,12 +113,9 @@
     </main>
 
     <footer class="footer">
-        <div class="container footer-container">
-            <p class="footer-logo">
-                <a href="./index.html" class="logo-link">WEB<span class="studio-footer">STUDIO</span></a>
-                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
-            </p>
+        <div class="container">
+            <a href="./index.html" class="logo-link">WEB<span class="studio-footer">STUDIO</span></a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
     </footer>
 </body>
