--- a/portfolio.html
+++ b/portfolio.html
@@ -9,12 +9,12 @@
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
-  <header class="header" id="">
+  <header class="header">
     <div class="container header-container">
         <nav class="main-nav">
             <a href="./index.html" class="logo-link">WEB<span class="studio">STUDIO</span></a>
@@ -38,57 +38,75 @@
       <div class="container projects-container">
         <h1 class="visually-hidden">Our Projects</h1>
         <ul class="filter-buttons">
-          <button type="button" class="filter-button">All</button>
-          <button type="button" class="filter-button">Web Site</button>
-          <button type="button" class="filter-button">App</button>
-          <button type="button" class="filter-button">Design</button>
-          <button type="button" class="filter-button">Marketing</button>
+          <li><button type="button" class="filter-button">All</button></li>
+          <li><button type="button" class="filter-button">Web Site</button></li>
+          <li><button type="button" class="filter-button">App</button></li>
+          <li><button type="button" class="filter-button">Design</button></li>
+          <li><button type="button" class="filter-button">Marketing</button></li>
         </ul>
         <ul class="project-list">
           <li class="project-item">
             <img src="./images/img8.jpg" alt="banking" width="360">
-            <h2 class="project-title">Banking App Interface Concept</h2>
-            <p class="project-category">App</p>
+            <div class="project-info">
+              <h2 class="project-title">Banking App Interface Concept</h2>
+              <p class="project-category">App</p>
+            </div>
           </li>
           <li class="project-item">
             <img src="./images/img-7.jpg" alt="cashless" width="360">
-            <h3 class="project-title">Cashless Payment</h3>
-            <p class="project-category">Marketing</p>
+            <div class="project-info">
+              <h3 class="project-title">Cashless Payment</h3>
+              <p class="project-category">Marketing</p>
+          </div>
           </li>
           <li class="project-item">
             <img src="./images/img7.jpg" alt="mediation" width="360">
-            <h3 class="project-title">Meditation App</h3>
-            <p class="project-category">App</p>
+            <div class="project-info">
+              <h3 class="project-title">Meditation App</h3>
+              <p class="project-category">App</p>
+            </div>
           </li>
           <li class="project-item">
             <img src="./images/img-6.jpg" alt="taxi" width="360">
-            <h3 class="project-title">Taxi Service</h3>
-            <p class="project-category">Marketing</p>
+            <div class="project-info">
+              <h3 class="project-title">Taxi Service</h3>
+              <p class="project-category">Marketing</p>
+            </div>
           </li>
           <li class="project-item">
             <img src="./images/img6.jpg" alt="screen" width="360">
-            <h3 class="project-title">Screen Illustrations</h3>
-            <p class="project-category">Design</p>
+            <div class="project-info">
+              <h3 class="project-title">Screen Illustrations</h3>
+              <p class="project-category">Design</p>
+            </div>
           </li>
           <li class="project-item">
             <img src="./images/img-5.jpg" alt="courses" width="360">
-            <h3 class="project-title">Online Courses</h3>
-            <p class="project-category">Marketing</p>
+            <div class="project-info">
+              <h3 class="project-title">Online Courses</h3>
+              <p class="project-category">Marketing</p>
+            </div>
           </li>
           <li class="project-item">
             <img src="./images/img5.jpg" alt="istagram" width="360">
-            <h3 class="project-title">Instagram Stories Concept</h3>
-            <p class="project-category">Design</p>
+            <div class="project-info">
+              <h3 class="project-title">Instagram Stories Concept</h3>
+              <p class="project-category">Design</p>
+            </div>
           </li>
           <li class="project-item">
             <img src="./images/img-4.jpg" alt="organic" width="360">
-            <h3 class="project-title">Organic Food</h3>
-            <p class="project-category">Web Site</p>
+            <div class="project-info">
+              <h3 class="project-title">Organic Food</h3>
+              <p class="project-category">Web Site</p>
+            </div>
           </li>
           <li class="project-item">
             <img src="./images/img4.jpg" alt="coffee" width="360">
-            <h3 class="project-title">Fresh Coffee</h3>
-            <p class="project-category">Web Site</p>
+            <div class="project-info">
+              <h3 class="project-title">Fresh Coffee</h3>
+              <p class="project-category">Web Site</p>
+            </div>
           </li>
         </ul>
       </div>
@@ -96,14 +114,12 @@
   </main>
 
   <footer class="footer">
-    <div class="container footer-container">
-        <p class="footer-logo">
-            <a href="./index.html" class="logo-link">WEB<span class="studio-footer">STUDIO</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-            growth solutions.</p>
-        </p>
+    <div class="container">
+        <a href="./index.html" class="logo-link">WEB<span class="studio-footer">STUDIO</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
 </footer>
+
 </body>
 
 </html>
